add css and 10 question

--- a/style.css
+++ b/style.css
@@ -1,7 +1,80 @@
+#firstBlock{
+    display: flex;
+}
+
 #secondBlock{
     display: none;
 }
 
 #thirdBlock{
     display: none;
+}
+
+body{
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 900px;
+    background-color: #c8e7fd;
+}
+
+h1{
+    font-size: 40px;
+    color: #2c3e50;
+    margin-bottom: 20px;
+    text-align: center;
+}
+
+p{
+    font-size: 21px;
+    color: #34495e;
+    text-align: center;
+}
+
+#start{
+    align-items: center;
+}
+
+#firstBlock,
+#secondBlock,
+#thirdBlock{
+    background-color: #ffffff;
+    padding: 40px;
+    border-radius: 15px;
+    width: 500px;
+    flex-direction: column;
+    align-items: center;
+}
+
+button{
+    padding: 12px 24px;
+    margin: 10px;
+    font-size: 1rem;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+    background-color: #3498db;
+    color: white;
+    transition: background-color 0.4s ease;
+}
+
+button:hover{
+    background-color: #2980b9;
+}
+
+button.answer{
+    display: block;
+    width: 100%;
+    margin: 8px 0;
+    background-color: #4d67bb;
+    color: #2c3e50;
+    border: 2px solid #25475e;
+    color: white;
+}
+
+button.answer:hover{
+    background-color: #5c7add;
+    border-color: #3c7296;
 }
